relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-33.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@urlauth:remove|https://username:password@example.com/": {
    "type": "string",
    "value": "https://@example.com/"
  },
  "_meta": {
    "@urlauth:remove|https://username:password@example.com/": {
      "value": {
        "": {
          "rem": [
            [
              "@urlauth:remove",
              "x",
              8,
              8
            ]
          ],
          "len": 38
        }
      }
    }
  }
}
