relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-34.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@urlauth:mask|https://username:password@example.com/": {
    "type": "string",
    "value": "https://*****************@example.com/"
  },
  "_meta": {
    "@urlauth:mask|https://username:password@example.com/": {
      "value": {
        "": {
          "rem": [
            [
              "@urlauth:mask",
              "m",
              8,
              25
            ]
          ],
          "len": 38
        }
      }
    }
  }
}
