relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-36.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@usssn:replace|078-05-1120": {
    "type": "string",
    "value": "[us-ssn]"
  },
  "_meta": {
    "@usssn:replace|078-05-1120": {
      "value": {
        "": {
          "rem": [
            [
              "@usssn:replace",
              "s",
              0,
              8
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
