relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-37.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@usssn:remove|078-05-1120": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@usssn:remove|078-05-1120": {
      "value": {
        "": {
          "rem": [
            [
              "@usssn:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
