relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-38.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@usssn:mask|078-05-1120": {
    "type": "string",
    "value": "***********"
  },
  "_meta": {
    "@usssn:mask|078-05-1120": {
      "value": {
        "": {
          "rem": [
            [
              "@usssn:mask",
              "m",
              0,
              11
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
