relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-4.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@ip:mask|127.0.0.1": {
    "type": "string",
    "value": "*********"
  },
  "_meta": {
    "@ip:mask|127.0.0.1": {
      "value": {
        "": {
          "rem": [
            [
              "@ip:mask",
              "m",
              0,
              9
            ]
          ],
          "len": 9
        }
      }
    }
  }
}
