relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-40.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@userpath:replace|/Users/john/Documents": {
    "type": "string",
    "value": "/Users/[user]/Documents"
  },
  "_meta": {
    "@userpath:replace|/Users/john/Documents": {
      "value": {
        "": {
          "rem": [
            [
              "@userpath:replace",
              "s",
              7,
              13
            ]
          ],
          "len": 21
        }
      }
    }
  }
}
