relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-41.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@userpath:remove|/Users/john/Documents": {
    "type": "string",
    "value": "/Users//Documents"
  },
  "_meta": {
    "@userpath:remove|/Users/john/Documents": {
      "value": {
        "": {
          "rem": [
            [
              "@userpath:remove",
              "x",
              7,
              7
            ]
          ],
          "len": 21
        }
      }
    }
  }
}
